scripts/cppfier/src/grammar/DoxyCommentParser.ts
// Generated from src/grammar/DoxyComment.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { DoxyCommentListener } from "./DoxyCommentListener";

export class DoxyCommentParser extends Parser {
	public static readonly CODE_DELIM = 1;
	public static readonly TABLE_DELIM = 2;
	public static readonly LIST_DELIM = 3;
	public static readonly TITLE_DELIM = 4;
	public static readonly DEFGROUP_TAG = 5;
	public static readonly RETURNS_TAG = 6;
	public static readonly PARAM_TAG = 7;
	public static readonly THREAD_SAFETY_TAG = 8;
	public static readonly SA_TAG = 9;
	public static readonly SINCE_TAG = 10;
	public static readonly POST_TAG = 11;
	public static readonly THROWS_TAG = 12;
	public static readonly WORD = 13;
	public static readonly WS = 14;
	public static readonly NL = 15;
	public static readonly RULE_doc = 0;
	public static readonly RULE_block = 1;
	public static readonly RULE_title = 2;
	public static readonly RULE_paragraph = 3;
	public static readonly RULE_list = 4;
	public static readonly RULE_table = 5;
	public static readonly RULE_codeblock = 6;
	public static readonly RULE_taggedSection = 7;
	public static readonly RULE_taggedBlock = 8;
	public static readonly RULE_empty = 9;
	public static readonly RULE_textLine = 10;
	public static readonly RULE_listItem = 11;
	public static readonly RULE_listItemContent = 12;
	public static readonly RULE_tableItem = 13;
	public static readonly RULE_blockTag = 14;
	public static readonly RULE_endLine = 15;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"doc", "block", "title", "paragraph", "list", "table", "codeblock", "taggedSection", 
		"taggedBlock", "empty", "textLine", "listItem", "listItemContent", "tableItem", 
		"blockTag", "endLine",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, "'|'", "'-'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "CODE_DELIM", "TABLE_DELIM", "LIST_DELIM", "TITLE_DELIM", "DEFGROUP_TAG", 
		"RETURNS_TAG", "PARAM_TAG", "THREAD_SAFETY_TAG", "SA_TAG", "SINCE_TAG", 
		"POST_TAG", "THROWS_TAG", "WORD", "WS", "NL",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(DoxyCommentParser._LITERAL_NAMES, DoxyCommentParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return DoxyCommentParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "DoxyComment.g4"; }

	// @Override
	public get ruleNames(): string[] { return DoxyCommentParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return DoxyCommentParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(DoxyCommentParser._ATN, this);
	}
	// @RuleVersion(0)
	public doc(): DocContext {
		let _localctx: DocContext = new DocContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, DoxyCommentParser.RULE_doc);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 35;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << DoxyCommentParser.CODE_DELIM) | (1 << DoxyCommentParser.TABLE_DELIM) | (1 << DoxyCommentParser.LIST_DELIM) | (1 << DoxyCommentParser.TITLE_DELIM) | (1 << DoxyCommentParser.DEFGROUP_TAG) | (1 << DoxyCommentParser.RETURNS_TAG) | (1 << DoxyCommentParser.PARAM_TAG) | (1 << DoxyCommentParser.THREAD_SAFETY_TAG) | (1 << DoxyCommentParser.SA_TAG) | (1 << DoxyCommentParser.SINCE_TAG) | (1 << DoxyCommentParser.POST_TAG) | (1 << DoxyCommentParser.THROWS_TAG) | (1 << DoxyCommentParser.WORD) | (1 << DoxyCommentParser.WS) | (1 << DoxyCommentParser.NL))) !== 0)) {
				{
				{
				this.state = 32;
				this.block();
				}
				}
				this.state = 37;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 38;
			this.match(DoxyCommentParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let _localctx: BlockContext = new BlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, DoxyCommentParser.RULE_block);
		try {
			this.state = 47;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 40;
				this.title();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 41;
				this.paragraph();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 42;
				this.list();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 43;
				this.table();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 44;
				this.codeblock();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 45;
				this.taggedSection();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 46;
				this.empty();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public title(): TitleContext {
		let _localctx: TitleContext = new TitleContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, DoxyCommentParser.RULE_title);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 49;
			this.match(DoxyCommentParser.TITLE_DELIM);
			this.state = 50;
			this.textLine();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public paragraph(): ParagraphContext {
		let _localctx: ParagraphContext = new ParagraphContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, DoxyCommentParser.RULE_paragraph);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 53;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 52;
					this.textLine();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 55;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 2, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public list(): ListContext {
		let _localctx: ListContext = new ListContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, DoxyCommentParser.RULE_list);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 58;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 57;
					this.listItem();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 60;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 3, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public table(): TableContext {
		let _localctx: TableContext = new TableContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, DoxyCommentParser.RULE_table);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 63;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 62;
				this.tableItem();
				}
				}
				this.state = 65;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === DoxyCommentParser.TABLE_DELIM);
			this.state = 67;
			this.endLine();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public codeblock(): CodeblockContext {
		let _localctx: CodeblockContext = new CodeblockContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, DoxyCommentParser.RULE_codeblock);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 69;
			this.match(DoxyCommentParser.CODE_DELIM);
			this.state = 73;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << DoxyCommentParser.TABLE_DELIM) | (1 << DoxyCommentParser.LIST_DELIM) | (1 << DoxyCommentParser.TITLE_DELIM) | (1 << DoxyCommentParser.DEFGROUP_TAG) | (1 << DoxyCommentParser.RETURNS_TAG) | (1 << DoxyCommentParser.PARAM_TAG) | (1 << DoxyCommentParser.THREAD_SAFETY_TAG) | (1 << DoxyCommentParser.SA_TAG) | (1 << DoxyCommentParser.SINCE_TAG) | (1 << DoxyCommentParser.POST_TAG) | (1 << DoxyCommentParser.THROWS_TAG) | (1 << DoxyCommentParser.WORD) | (1 << DoxyCommentParser.WS) | (1 << DoxyCommentParser.NL))) !== 0)) {
				{
				{
				this.state = 70;
				_la = this._input.LA(1);
				if (_la <= 0 || (_la === DoxyCommentParser.CODE_DELIM)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
				}
				this.state = 75;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 76;
			this.match(DoxyCommentParser.CODE_DELIM);
			this.state = 77;
			this.endLine();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public taggedSection(): TaggedSectionContext {
		let _localctx: TaggedSectionContext = new TaggedSectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, DoxyCommentParser.RULE_taggedSection);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 80;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 79;
					this.taggedBlock();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 82;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public taggedBlock(): TaggedBlockContext {
		let _localctx: TaggedBlockContext = new TaggedBlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, DoxyCommentParser.RULE_taggedBlock);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 84;
			this.blockTag();
			this.state = 86;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 85;
					this.textLine();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 88;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public empty(): EmptyContext {
		let _localctx: EmptyContext = new EmptyContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, DoxyCommentParser.RULE_empty);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 90;
			this.match(DoxyCommentParser.NL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public textLine(): TextLineContext {
		let _localctx: TextLineContext = new TextLineContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, DoxyCommentParser.RULE_textLine);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 92;
			_la = this._input.LA(1);
			if (!(_la === DoxyCommentParser.WORD || _la === DoxyCommentParser.WS)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 96;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << DoxyCommentParser.CODE_DELIM) | (1 << DoxyCommentParser.TABLE_DELIM) | (1 << DoxyCommentParser.LIST_DELIM) | (1 << DoxyCommentParser.TITLE_DELIM) | (1 << DoxyCommentParser.DEFGROUP_TAG) | (1 << DoxyCommentParser.RETURNS_TAG) | (1 << DoxyCommentParser.PARAM_TAG) | (1 << DoxyCommentParser.THREAD_SAFETY_TAG) | (1 << DoxyCommentParser.SA_TAG) | (1 << DoxyCommentParser.SINCE_TAG) | (1 << DoxyCommentParser.POST_TAG) | (1 << DoxyCommentParser.THROWS_TAG) | (1 << DoxyCommentParser.WORD) | (1 << DoxyCommentParser.WS))) !== 0)) {
				{
				{
				this.state = 93;
				_la = this._input.LA(1);
				if (_la <= 0 || (_la === DoxyCommentParser.NL)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
				}
				this.state = 98;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 99;
			this.endLine();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public listItem(): ListItemContext {
		let _localctx: ListItemContext = new ListItemContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, DoxyCommentParser.RULE_listItem);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 104;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === DoxyCommentParser.WS) {
				{
				{
				this.state = 101;
				this.match(DoxyCommentParser.WS);
				}
				}
				this.state = 106;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 107;
			this.match(DoxyCommentParser.LIST_DELIM);
			this.state = 108;
			this.listItemContent();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public listItemContent(): ListItemContentContext {
		let _localctx: ListItemContentContext = new ListItemContentContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, DoxyCommentParser.RULE_listItemContent);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 111;
			this._errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					this.state = 110;
					this.textLine();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 113;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 10, this._ctx);
			} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public tableItem(): TableItemContext {
		let _localctx: TableItemContext = new TableItemContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, DoxyCommentParser.RULE_tableItem);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 115;
			this.match(DoxyCommentParser.TABLE_DELIM);
			this.state = 121;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					this.state = 119;
					this._errHandler.sync(this);
					switch (this._input.LA(1)) {
					case DoxyCommentParser.CODE_DELIM:
					case DoxyCommentParser.LIST_DELIM:
					case DoxyCommentParser.TITLE_DELIM:
					case DoxyCommentParser.DEFGROUP_TAG:
					case DoxyCommentParser.RETURNS_TAG:
					case DoxyCommentParser.PARAM_TAG:
					case DoxyCommentParser.THREAD_SAFETY_TAG:
					case DoxyCommentParser.SA_TAG:
					case DoxyCommentParser.SINCE_TAG:
					case DoxyCommentParser.POST_TAG:
					case DoxyCommentParser.THROWS_TAG:
					case DoxyCommentParser.WORD:
					case DoxyCommentParser.WS:
					case DoxyCommentParser.NL:
						{
						this.state = 116;
						_la = this._input.LA(1);
						if (_la <= 0 || (_la === DoxyCommentParser.TABLE_DELIM)) {
						this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						}
						break;
					case DoxyCommentParser.TABLE_DELIM:
						{
						this.state = 117;
						this.match(DoxyCommentParser.TABLE_DELIM);
						this.state = 118;
						_la = this._input.LA(1);
						if (_la <= 0 || (_la === DoxyCommentParser.NL)) {
						this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
				}
				this.state = 123;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx);
			}
			this.state = 124;
			this.match(DoxyCommentParser.TABLE_DELIM);
			this.state = 125;
			this.endLine();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public blockTag(): BlockTagContext {
		let _localctx: BlockTagContext = new BlockTagContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, DoxyCommentParser.RULE_blockTag);
		let _la: number;
		try {
			this.state = 147;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case DoxyCommentParser.PARAM_TAG:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 127;
				this.match(DoxyCommentParser.PARAM_TAG);
				this.state = 129;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 128;
					this.match(DoxyCommentParser.WS);
					}
					}
					this.state = 131;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (_la === DoxyCommentParser.WS);
				this.state = 133;
				this.match(DoxyCommentParser.WORD);
				}
				break;
			case DoxyCommentParser.DEFGROUP_TAG:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 134;
				this.match(DoxyCommentParser.DEFGROUP_TAG);
				this.state = 136;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 135;
					this.match(DoxyCommentParser.WS);
					}
					}
					this.state = 138;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (_la === DoxyCommentParser.WS);
				this.state = 140;
				this.match(DoxyCommentParser.WORD);
				}
				break;
			case DoxyCommentParser.RETURNS_TAG:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 141;
				this.match(DoxyCommentParser.RETURNS_TAG);
				}
				break;
			case DoxyCommentParser.THREAD_SAFETY_TAG:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 142;
				this.match(DoxyCommentParser.THREAD_SAFETY_TAG);
				}
				break;
			case DoxyCommentParser.SA_TAG:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 143;
				this.match(DoxyCommentParser.SA_TAG);
				}
				break;
			case DoxyCommentParser.SINCE_TAG:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 144;
				this.match(DoxyCommentParser.SINCE_TAG);
				}
				break;
			case DoxyCommentParser.POST_TAG:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 145;
				this.match(DoxyCommentParser.POST_TAG);
				}
				break;
			case DoxyCommentParser.THROWS_TAG:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 146;
				this.match(DoxyCommentParser.THROWS_TAG);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public endLine(): EndLineContext {
		let _localctx: EndLineContext = new EndLineContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, DoxyCommentParser.RULE_endLine);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 149;
			_la = this._input.LA(1);
			if (!(_la === DoxyCommentParser.EOF || _la === DoxyCommentParser.NL)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!DoxyCommentParser.__ATN) {
			DoxyCommentParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(DoxyCommentParser._serializedATN));
		}

		return DoxyCommentParser.__ATN;
	}

}

export class DocContext extends ParserRuleContext {
	public EOF(): TerminalNode { return this.getToken(DoxyCommentParser.EOF, 0); }
	public block(): BlockContext[];
	public block(i: number): BlockContext;
	public block(i?: number): BlockContext | BlockContext[] {
		if (i === undefined) {
			return this.getRuleContexts(BlockContext);
		} else {
			return this.getRuleContext(i, BlockContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return DoxyCommentParser.RULE_doc; }
	// @Override
	public enterRule(listener: DoxyCommentListener): void {
		if (listener.enterDoc) {
			listener.enterDoc(this);
		}
	}
	// @Override
	public exitRule(listener: DoxyCommentListener): void {
		if (listener.exitDoc) {
			listener.exitDoc(this);
		}
	}
}


export class BlockContext extends ParserRuleContext {
	public title(): TitleContext | undefined {
		return this.tryGetRuleContext(0, TitleContext);
	}
	public paragraph(): ParagraphContext | undefined {
		return this.tryGetRuleContext(0, ParagraphContext);
	}
	public list(): ListContext | undefined {
		return this.tryGetRuleContext(0, ListContext);
	}
	public table(): TableContext | undefined {
		return this.tryGetRuleContext(0, TableContext);
	}
	public codeblock(): CodeblockContext | undefined {
		return this.tryGetRuleContext(0, CodeblockContext);
	}
	public taggedSection(): TaggedSectionContext | undefined {
		return this.tryGetRuleContext(0, TaggedSectionContext);
	}
	public empty(): EmptyContext | undefined {
		return this.tryGetRuleContext(0, EmptyContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return DoxyCommentParser.RULE_block; }
	// @Override
	public enterRule(listener: DoxyCommentListener): void {
		if (listener.enterBlock) {
			listener.enterBlock(this);
		}
	}
	// @Override
	public exitRule(listener: DoxyCommentListener): void {
		if (listener.exitBlock) {
			listener.exitBlock(this);
		}
	}
}


export class TitleContext extends ParserRuleContext {
	public TITLE_DELIM(): TerminalNode { return this.getToken(DoxyCommentParser.TITLE_DELIM, 0); }
	public textLine(): TextLineContext {
		return this.getRuleContext(0, TextLineContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return DoxyCommentParser.RULE_title; }
	// @Override
	public enterRule(listener: DoxyCommentListener): void {
		if (listener.enterTitle) {
			listener.enterTitle(this);
		}
	}
	// @Override
	public exitRule(listener: DoxyCommentListener): void {
		if (listener.exitTitle) {
			listener.exitTitle(this);
		}
	}
}


export class ParagraphContext extends ParserRuleContext {
	public textLine(): TextLineContext[];
	public textLine(i: number): TextLineContext;
	public textLine(i?: number): TextLineContext | TextLineContext[] {
		if (i === undefined) {
			return this.getRuleContexts(TextLineContext);
		} else {
			return this.getRuleContext(i, TextLineContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return DoxyCommentParser.RULE_paragraph; }
	// @Override
	public enterRule(listener: DoxyCommentListener): void {
		if (listener.enterParagraph) {
			listener.enterParagraph(this);
		}
	}
	// @Override
	public exitRule(listener: DoxyCommentListener): void {
		if (listener.exitParagraph) {
			listener.exitParagraph(this);
		}
	}
}

